aws/vpc-fit-verse.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Enterprise VPC for MERN Stack (2 AZs, public/private subnets, NAT, IGW, S3 Endpoint)

Parameters:
  VpcCIDR:
    Type: String
    Default: 10.0.0.0/16
  PublicSubnet1CIDR:
    Type: String
    Default: 10.0.1.0/24
  PublicSubnet2CIDR:
    Type: String
    Default: 10.0.2.0/24
  PrivateSubnet1CIDR:
    Type: String
    Default: 10.0.3.0/24
  PrivateSubnet2CIDR:
    Type: String
    Default: 10.0.4.0/24

Resources:
  FitVerseVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: fit-verse-vpc

  FitVerseInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: fit-verse-igw

  FitVerseVPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref FitVerseVPC
      InternetGatewayId: !Ref FitVerseInternetGateway

  # Public Subnets
  FitVerseSubnetPublic1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref FitVerseVPC
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: fit-verse-subnet-public1

  FitVerseSubnetPublic2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref FitVerseVPC
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: fit-verse-subnet-public2

  # Private Subnets
  FitVerseSubnetPrivate1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref FitVerseVPC
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: fit-verse-subnet-private1

  FitVerseSubnetPrivate2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref FitVerseVPC
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: fit-verse-subnet-private2

  # Public Route Table
  FitVerseRouteTablePublic:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref FitVerseVPC
      Tags:
        - Key: Name
          Value: fit-verse-rtb-public

  FitVerseRoutePublic:
    Type: AWS::EC2::Route
    DependsOn: FitVerseVPCGatewayAttachment
    Properties:
      RouteTableId: !Ref FitVerseRouteTablePublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref FitVerseInternetGateway

  FitVerseSubnetPublic1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FitVerseSubnetPublic1
      RouteTableId: !Ref FitVerseRouteTablePublic

  FitVerseSubnetPublic2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FitVerseSubnetPublic2
      RouteTableId: !Ref FitVerseRouteTablePublic

  # NAT Gateway for Private Subnets
  FitVerseEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  FitVerseNATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt FitVerseEIP.AllocationId
      SubnetId: !Ref FitVerseSubnetPublic1
      Tags:
        - Key: Name
          Value: fit-verse-natgw

  # Private Route Tables
  FitVerseRouteTablePrivate1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref FitVerseVPC
      Tags:
        - Key: Name
          Value: fit-verse-rtb-private1

  FitVerseRouteTablePrivate2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref FitVerseVPC
      Tags:
        - Key: Name
          Value: fit-verse-rtb-private2

  FitVerseRoutePrivate1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref FitVerseRouteTablePrivate1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref FitVerseNATGateway

  FitVerseRoutePrivate2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref FitVerseRouteTablePrivate2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref FitVerseNATGateway

  FitVerseSubnetPrivate1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FitVerseSubnetPrivate1
      RouteTableId: !Ref FitVerseRouteTablePrivate1

  FitVerseSubnetPrivate2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FitVerseSubnetPrivate2
      RouteTableId: !Ref FitVerseRouteTablePrivate2

  # S3 VPC Endpoint (for private S3 access)
  FitVerseVPCEndpointS3:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref FitVerseVPC
      RouteTableIds: 
        - !Ref FitVerseRouteTablePrivate1
        - !Ref FitVerseRouteTablePrivate2
      Tags:
        - Key: Name
          Value: fit-verse-vpce-s3

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref FitVerseVPC
    Export:
      Name: FitVerseVPC

  SubnetPublic1:
    Description: Public Subnet 1 ID
    Value: !Ref FitVerseSubnetPublic1
    Export:
      Name: FitVerseSubnetPublic1

  SubnetPublic2:
    Description: Public Subnet 2 ID
    Value: !Ref FitVerseSubnetPublic2
    Export:
      Name: FitVerseSubnetPublic2

  SubnetPrivate1:
    Description: Private Subnet 1 ID
    Value: !Ref FitVerseSubnetPrivate1
    Export:
      Name: FitVerseSubnetPrivate1

  SubnetPrivate2:
    Description: Private Subnet 2 ID
    Value: !Ref FitVerseSubnetPrivate2
    Export:
      Name: FitVerseSubnetPrivate2

  VPCEndpointS3:
    Description: S3 VPC Endpoint ID
    Value: !Ref FitVerseVPCEndpointS3
    Export:
      Name: FitVerseVPCEndpointS3

  RouteTablePublic:
    Description: Public Route Table ID
    Value: !Ref FitVerseRouteTablePublic
    Export:
      Name: FitVerseRouteTablePublic

  RouteTablePrivate1:
    Description: Private Route Table 1 ID
    Value: !Ref FitVerseRouteTablePrivate1
    Export:
      Name: FitVerseRouteTablePrivate1

  RouteTablePrivate2:
    Description: Private Route Table 2 ID
    Value: !Ref FitVerseRouteTablePrivate2
    Export:
      Name: FitVerseRouteTablePrivate2
